# LearnCMake

./: .gitignore  README.md
Chapter01/: README.md
Chapter02/: README.md
Chapter02/tools/: build.fish
Chapter02/tools/fish/: print.fish
Chapter03/: CMakeLists.txt  README.md
Chapter03/projects/Chapter03/: CMakeLists.txt
Chapter03/projects/Chapter03/source/: main.cpp
Chapter03/scripts/: build.fish  build.ps1
Chapter03/source/Chapter03/: main.cpp
Chapter03/tools/: build.fish  build.ps1
Chapter04/: CMakeLists.txt  README.md
Chapter04/cmake/: compiler.cmake
Chapter04/projects/Chapter04/: CMakeLists.txt
Chapter04/projects/Chapter04/source/: main.cpp
Chapter04/projects/Geometry/: CMakeLists.txt
Chapter04/projects/IO/: CMakeLists.txt
Chapter04/projects/IO/include/IO/: output.hpp
Chapter04/projects/Log/: CMakeLists.txt
Chapter04/projects/Log/source/Log/: log.cpp
Chapter04/projects/Math/: CMakeLists.txt
Chapter04/projects/Math/source/Math/: division.cpp
Chapter04/projects/Statistics/: CMakeLists.txt
Chapter04/tools/: build.fish  build.ps1
Chapter05/: CMakeLists.txt  README.md
Chapter05/cmake/: language.cmake
Chapter05/projects/Chapter05/: CMakeLists.txt
Chapter05/projects/Geometry/: CMakeLists.txt
Chapter05/projects/Geometry/include/Geometry/: Rectangle.hpp
Chapter05/projects/IO/: CMakeLists.txt
Chapter05/projects/Log/: CMakeLists.txt
Chapter05/projects/Log/source/Log/: log.cpp
Chapter05/projects/Math/: CMakeLists.txt
Chapter05/projects/Math/include/Math/: addition.hpp  multiplication.hpp
Chapter05/projects/Math/source/Math/: subtraction.cpp
Chapter05/projects/Statistics/: CMakeLists.txt
Chapter05/projects/Statistics/include/Statistics/: average.hpp
Chapter05/projects/Statistics/source/Statistics/: average.cpp
Chapter05/tests/Geometry/: failing.fish
Chapter05/tests/IO/: failing.ps1
Chapter05/tools/: build.ps1
Chapter06/: CMakeLists.txt  README.md
Chapter06/cmake/: caches.cmake  lists.cmake  math.cmake  scopes.cmake  strings.cmake  variables.cmake
Chapter06/tools/: build.fish
Chapter07/: CMakeLists.txt  README.md
Chapter07/cmake/: conditionals.cmake  loops.cmake
Chapter07/tools/: build.ps1
Chapter08/: CMakeLists.txt  README.md
Chapter08/cmake/: include.cmake
Chapter08/projects/Chapter08/: CMakeLists.txt
Chapter09/: CMakeLists.txt  README.md
Chapter09/cmake/: functions.cmake  invokes.cmake  macros.cmake  overloads.cmake
Chapter09/tools/: build.fish  build.ps1
Chapter10/: CMakeLists.txt  README.md
Chapter10/cmake/: properties.cmake
Chapter10/projects/Chapter10/: CMakeLists.txt
Chapter10/projects/Geometry/: CMakeLists.txt
Chapter10/projects/Geometry/source/Geometry/: Rectangle.cpp
Chapter10/projects/IO/: CMakeLists.txt
Chapter10/projects/IO/include/IO/: input.hpp
Chapter10/projects/Log/: CMakeLists.txt
Chapter10/projects/Log/include/Log/: log.hpp
Chapter10/projects/Math/: CMakeLists.txt
Chapter10/projects/Math/cmake/: sources.cmake
Chapter10/projects/Math/include/Math/: division.hpp  subtraction.hpp
Chapter10/projects/Math/source/Math/: addition.cpp  multiplication.cpp
Chapter10/projects/Statistics/: CMakeLists.txt
Chapter10/tests/Log/: passing.fish
Chapter10/tools/: build.fish
Chapter11/: CMakeLists.txt  README.md
Chapter11/cmake/: genexes.cmake
Chapter11/projects/Chapter11/: CMakeLists.txt
Chapter11/projects/Chapter11/source/: main.cpp
Chapter11/tests/Chapter11/: passing.ps1
Chapter12/: CMakeLists.txt  README.md
Chapter12/cmake/: Language.cmake
Chapter12/projects/Chapter12/: CMakeLists.txt
Chapter13/: CMakeLists.txt  README.md
Chapter13/cmake/: Policy.cmake
Chapter14/: CMakeLists.txt  README.md
Chapter14/cmake/: Checks.cmake  DebugGenex.cmake  FnPrint.cmake  Indenting.cmake  LogLevels.cmake  VariableWatch.cmake
Chapter14/projects/Chapter14/: CMakeLists.txt
Chapter14/tools/fish/: relative.fish
Chapter15/: CMakeLists.txt  README.md
Chapter15/projects/Chapter15/: CMakeLists.txt
Chapter15/projects/Chapter15/source/: main.cpp
