# >----------< CMAKE >---------------------------------------------------------------------------< #

cmake_minimum_required(VERSION 3.30)

# >----------< SOLUTION : Chapter03 >------------------------------------------------------------< #

project(SLN_Chapter03 VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

# >----------< PROJECTS >------------------------------------------------------------------------< #

add_subdirectory("projects/Chapter03")
