# >----------< PROJECT : Chapter05 >-------------------------------------------------------------< #

project(PRJ_Chapter03)

# >----------< TARGET : Chapter03 >--------------------------------------------------------------< #

add_executable(Chapter03)

target_sources(
  Chapter03
  PRIVATE
    "source/main.cpp"
)
